# ferroq

./: .dockerignore  .gitignore  BENCHMARK.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  PLAN.md  PLAN_PATH_A.md  PLAN_PATH_B.md  README.md  README_ZH.md  config.example.yaml  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  competitive-watch.yml  release.yml
crates/ferroq/: Cargo.toml
crates/ferroq-core/: Cargo.toml
crates/ferroq-core/src/: adapter.rs  api.rs  config.rs  error.rs  event.rs  lib.rs  message.rs  plugin.rs  protocol.rs  validation.rs
crates/ferroq-gateway/: Cargo.toml
crates/ferroq-gateway/benches/: dedup_filter.rs  event_bus.rs  event_parse.rs  helpers.rs  memory_profile.rs  official_adapter.rs  pipeline.rs
crates/ferroq-gateway/src/: adapter_manager.rs  bus.rs  dedup.rs  forward.rs  lib.rs  management.rs  middleware.rs  onebot_v11.rs  onebot_v12.rs  plugin_engine.rs  router.rs  runtime.rs  satori.rs  shared_config.rs  stats.rs  storage.rs  tuning.rs
crates/ferroq-gateway/src/adapter/: failover.rs  lagrange.rs  mod.rs  official.rs
crates/ferroq-gateway/src/server/: mod.rs  onebot_v11.rs  onebot_v12.rs  satori.rs
crates/ferroq-gateway/tests/: integration_test.rs
crates/ferroq-gateway/tests/mock_backend/: mod.rs
crates/ferroq-web/: Cargo.toml
crates/ferroq-web/src/: lib.rs
crates/ferroq/src/: main.rs
docs/: book.toml
docs/src/en/: SUMMARY.md  introduction.md
docs/src/en/guide/: configuration.md  failover.md  management-api.md  protocols.md  quick-start.md
docs/src/en/plugins/: api-reference.md  getting-started.md  overview.md
docs/src/en/reference/: architecture.md  competitive-benchmark.md  faq.md  performance.md
docs/src/zh/: SUMMARY.md  introduction.md
docs/src/zh/guide/: configuration.md  failover.md  management-api.md  protocols.md  quick-start.md
docs/src/zh/plugins/: api-reference.md  getting-started.md  overview.md
docs/src/zh/reference/: architecture.md  competitive-benchmark.md  faq.md  performance.md
docs/theme/: custom.css
plugins/: README.md
plugins/echo/: Cargo.toml
plugins/echo/src/: lib.rs
scripts/: compare_gateways.ps1  competitive_snapshot.ps1
