[workspace]
resolver = "2"
members = [
    "crates/ferroq-core",
    "crates/ferroq-gateway",
    "crates/ferroq-web",
    "crates/ferroq",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/YanZhangN/ferroq"
description = "High-performance QQ Bot unified gateway"

[workspace.dependencies]
# === Async Runtime ===
tokio        = { version = "1", features = ["full"] }
futures      = "0.3"
tokio-util   = "0.7"

# === Network / WebSocket ===
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
reqwest           = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# === Web Framework ===
axum             = { version = "0.8", features = ["ws"] }
axum-extra       = { version = "0.10", features = ["typed-header"] }
tower            = "0.5"
tower-http       = { version = "0.6", features = ["cors", "fs", "compression-gzip", "trace"] }

# === Serialization ===
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
serde_yaml       = "0.9"
toml             = "0.8"

# === Storage ===
rusqlite         = { version = "0.32", features = ["bundled"] }
dashmap          = "6"

# === Config / CLI ===
clap             = { version = "4", features = ["derive"] }

# === Logging ===
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender   = "0.2"

# === Error Handling ===
anyhow           = "1"
thiserror        = "2"

# === Utilities ===
bytes            = { version = "1", features = ["serde"] }
chrono           = { version = "0.4", features = ["serde"] }
uuid             = { version = "1", features = ["serde", "v4"] }
rand             = "0.9"
arc-swap         = { version = "1", features = ["serde"] }
once_cell        = "1"
rust-embed       = "8"
url              = "2"
regex            = "1"
parking_lot      = "0.12"
async-trait      = "0.1"
pin-project-lite = "0.2"

# === Internal Crates ===
ferroq-core    = { path = "crates/ferroq-core" }
ferroq-gateway = { path = "crates/ferroq-gateway" }
ferroq-web     = { path = "crates/ferroq-web" }

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
strip = true
incremental = false
