[package]
name = "ferroq-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core types, traits, and abstractions for ferroq"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
bytes.workspace = true
tracing.workspace = true
async-trait.workspace = true
url.workspace = true
tokio = { workspace = true, features = ["sync"] }
futures.workspace = true
