[package]
name = "ferroq-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Gateway logic: backend adapters, protocol servers, event bus"

[dependencies]
ferroq-core.workspace = true

tokio.workspace = true
futures.workspace = true
tokio-util.workspace = true
tokio-tungstenite.workspace = true
reqwest.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

rusqlite.workspace = true
dashmap.workspace = true

tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true

bytes.workspace = true
chrono.workspace = true
uuid.workspace = true
url.workspace = true
async-trait.workspace = true
arc-swap.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tokio-tungstenite.workspace = true
reqwest.workspace = true
chrono.workspace = true
