[package]
name = "ferroq-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Gateway logic: backend adapters, protocol servers, event bus"

[features]
default = ["wasm-plugins"]
wasm-plugins = ["dep:wasmtime"]

[dependencies]
ferroq-core.workspace = true

tokio.workspace = true
futures.workspace = true
tokio-tungstenite.workspace = true
reqwest.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

rusqlite.workspace = true

tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true

chrono.workspace = true
uuid.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
hmac.workspace = true
sha1.workspace = true
hex.workspace = true
rand.workspace = true

# WASM plugin runtime (optional)
wasmtime = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tokio-tungstenite.workspace = true
reqwest.workspace = true
chrono.workspace = true
rand.workspace = true
