[package]
name = "ferroq-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Web dashboard for ferroq"

[dependencies]
ferroq-core.workspace = true
ferroq-gateway.workspace = true

axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true

serde.workspace = true
serde_json.workspace = true

tracing.workspace = true
anyhow.workspace = true

rust-embed.workspace = true
