[package]
name = "ferroq-plugin-echo"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Echo plugin for ferroq - repeats messages back"

# Not part of the main workspace
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"   # Optimize for size
lto = true
codegen-units = 1
strip = true
